--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
   "license": "ISC",
   "devDependencies": {
     "mocha": "^10.3.0"
+  },
+  "dependencies": {
+    "acorn": "^8.11.3",
+    "magic-string": "^0.30.8"
   }
 }
