--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "acorn": "^8.11.3",
-    "magic-string": "^0.30.8"
+    "estree-walker": "^3.0.3",
+    "magic-string": "^0.30.8",
+    "sourcemap-codec": "^1.4.8"
   }
 }
