--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "mocha --debug"
+    "test": "node test/test.js"
   },
   "keywords": [],
   "author": "",
