--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "node test/test.js"
+    "test": "mocha",
+    "debugger": "node test/test.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "chai": "^5.1.0",
     "mocha": "^10.3.0"
   },
   "dependencies": {
